--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,21 +17,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-    implementation 'com.google.zxing:core:3.3.3'      //zxing核心依赖
-    implementation 'com.journeyapps:zxing-android-embedded:3.3.0'  //生成二维码依赖
-
+    implementation 'com.google.zxing:core:3.3.3'
+    //zxing核心依赖
+    implementation 'com.journeyapps:zxing-android-embedded:3.3.0'
+    //生成二维码依赖
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.0.5'
     // 使用rxPermission
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
+    implementation 'com.zhy:okhttputils:2.6.2'
+    // BaseRecyclerViewAdapterHelper
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 }
