--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,10 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.0.5'
     // 使用rxPermission
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
+
     implementation 'com.zhy:okhttputils:2.6.2'
+//    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
     // BaseRecyclerViewAdapterHelper
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
