--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,10 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.5'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+    // Retrofit库
+    implementation 'com.squareup.okhttp3:okhttp:3.1.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
 }
