--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,15 @@
 apply plugin: 'com.android.application'
 
+def configs = rootProject.ext.android // android配置
+def libs = rootProject.ext.dependencies // 依赖库配置
+
 android {
-    compileSdkVersion 26
-    buildToolsVersion '27.0.3'
+    compileSdkVersion configs.compileSdkVersion
+    buildToolsVersion configs.buildToolsVersion
     defaultConfig {
         applicationId "com.yuantu.zxing"
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion configs.minSdkVersion
+        targetSdkVersion configs.targetSdkVersion
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -30,29 +33,21 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.zxing:core:3.3.3'
-    //zxing核心依赖
-    implementation 'com.journeyapps:zxing-android-embedded:3.3.0'
-
-    // 使用rxPermission
-    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
-
-    // BaseRecyclerViewAdapterHelper
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-
-    implementation 'com.google.code.gson:gson:2.8.5'
-    // retrofit2 及 使用库
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'  //
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-
+    testImplementation 'junit:junit:4.12'
+    implementation libs.appcompatV7
+    implementation libs.constraintLayout
+    implementation libs.zxing
+    implementation libs.zxingAndroidEmbedded
+    implementation libs.rxpermissions
+    implementation libs.rxjava
+    implementation libs.rxandroid
+    implementation libs.recyclerviewV7
+    implementation libs.BRVAH
+    implementation libs.gson
+    implementation libs.retrofit
+    implementation libs.converterGson
+    implementation libs.retrofit2Rxjava2Adapter
+    implementation libs.logInterceptor
 }
