--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,13 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        repositories{
+            //加入 以下语句
+            maven{url"https://maven.google.com"}
+            jcenter()
+            maven{url 'https://jitpack.io'}
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
