--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SwitchActivity">
-
+        <activity android:name=".ui.old.SwitchActivity">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.old.MainActivity">
+        </activity>
+        <activity android:name=".ui.old.ScanActivity" />
+        <activity android:name=".test.TestActivity" />
+        <activity android:name=".test.RyActivity" />
+        <activity android:name=".ui.old.BindedActivity"/>
+        <activity android:name=".ui.latest.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ScanActivity" />
-        <activity android:name=".test.TestActivity" />
-        <activity android:name=".test.RyActivity" />
-        <activity android:name=".BindedActivity"/>
+        <activity android:name=".ui.latest.HomeActivity"/>
     </application>
 
 </manifest>
