--- a/config.gradle
+++ b/config.gradle
@@ -9,6 +9,7 @@ ext {
 
     dependencies = [
             appcompatV7            : "com.android.support:appcompat-v7:$supportVersion",
+            design            : "com.android.support:design:$supportVersion",
             cardView               : "com.android.support:cardview-v7:$supportVersion",
             constraintLayout       : 'com.android.support.constraint:constraint-layout:1.1.2',
             // 二维码扫描
